# data-sources-app

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  ENV.md  README.md  alembic.ini  app.py  app_test.py  app_test_data.py  apply_migrations.py  config.py  conftest.py  do_db_ddl_clean.sql  execute.sh  pyproject.toml  regular_api_checks.py  req_updated_for_poetry.txt  requirements.txt  root.py  setup.py  start_mirrored_local_app.py
.github/: CODEOWNERS  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
alembic/: Jenkinsfile  env.py
client/: .env.local  .eslintignore  .eslintrc.json  .gitignore  globals.js  index.html  jsconfig.json  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.js  vue.config.js
database_client/: DTOs.py  client.py  constants.py  database_client.py  db_client_dataclasses.py  dynamic_query_constructor.py  enums.py  helper_functions.py  models.py  result_formatter.py  subquery_logic.py
db/: DTOs.py  client.py  db_client_dataclasses.py  dynamic_query_constructor.py  enums.py  exceptions.py  helper_functions.py  helpers.py  initialize_psycopg_connection.py  result_formatter.py  subquery_logic.py
docs/: README.md  architecture.md  troubleshooting.md
endpoints/: PsycopgResource.py  __init__.py  endpoint_schema_config.py  psycopg_resource.py
local_database/: README.md  constants.py  docker_compose.yml  setup.py  setup_local_database.py
manual_tests/: README.md  test_api_spec.py  test_create_github_issue.py  test_data_map.py  test_get_github_issue_project_statuses.py  test_github_logic.py  test_notifications_email.py  test_send_signup_link.py  test_send_via_mailgun.py  test_synchronize_manual.py
middleware/: SchedulerManager.py  SimpleJWT.py  __init__.py  access_log_filter.py  access_logic.py  access_token_logic.py  agencies.py  alembic_helpers.py  archives_queries.py  argument_checking_logic.py  authentication_info.py  callback_flask_sessions_logic.py  callback_oauth_logic.py  callback_primary_logic.py  column_permission_logic.py  common_response_formatting.py  constants.py  custom_dataclasses.py  custom_exceptions.py  data_requests.py  data_source_queries.py  dataclasses.py  decorators.py  dynamic_request_logic.py  enums.py  exceptions.py  flask_response_manager.py  get_by_id_logic.py  homepage_search_cache.py  initialize_psycopg2_connection.py  initialize_psycopg_connection.py  initialize_sqlalchemy_session.py  initialize_supabase_client.py  location_logic.py  login_queries.py  models.py  permissions_logic.py  quick_search_query.py  reset_token_queries.py  saved_search_queries.py  (+11 more)
mirrored_local_app/: DockerContainer.py  constants.py  docker_client.py  docker_manager.py  main.py  timestamp_checker.py
relation_access_permissions/: README.md  RelationConfigurationManager.py  Relations.txt  Requirements.txt  helper.py  load_relation_configurations.py  upload_relation_configurations_to_db.py
resources/: Admin.py  Agencies.py  ApiKey.py  ApiKeyResource.py  Archives.py  Auth.py  Batch.py  Callback.py  Contact.py  CreateTestUserWithElevatedPermissions.py  CreateUserWithGithub.py  DataRequest.py  DataRequests.py  DataSources.py  GithubDataRequests.py  GithubIssues.py  HomepageSearchCache.py  LinkToGithub.py  Locations.py  Login.py  LoginWithGithub.py  Map.py  Match.py  Metadata.py  Metrics.py  Notifications.py  OAuth.py  Permissions.py  PsycopgResource.py  QuickSearch.py  README.md  RefreshSession.py  RequestResetPassword.py  ResetPassword.py  ResetTokenValidation.py  SavedSearches.py  Search.py  SearchTokens.py  Signup.py  (+10 more)
(+1893 files in other folders)
