[tool.poetry]
name = "data-sources-app"
version = "0.1.0"
description = ""
authors = ["Police Data Accessibility Project <contact@pdap.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.2"
flask-restful = "0.3.10"
spacy = "3.6.1"
pyjwt = "2.8.0"
psycopg2-binary = "^2.9.9"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
