[project]
requires-python = ">= 3.12"
name="data_sources_app"
version="7.0.4"
dependencies = [
    "alembic~=1.14.1",
    "aniso8601==9.0.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "apscheduler~=3.11.0",
    "attrs==23.1.0",
    "authlib~=1.3.1",
    "blinker==1.6.2",
    "catalogue==2.0.9",
    "certifi==2023.7.22",
    "cffi==1.15.1",
    "chardet==4.0.0",
    "click==8.1.4",
    "commitizen~=4.2.1",
    "confection==0.1.3",
    "cryptography==41.0.6",
    "cymem==2.0.7",
    "dataclasses==0.6",
    "deprecation==2.1.0",
    "dominate~=2.9.1",
    "exceptiongroup==1.1.3",
    "flask==2.3.2",
    "flask-cors==4.0.0",
    "flask-jwt-extended~=4.6.0",
    "flask-limiter~=3.8.0",
    "flask-restx==1.3.0",
    "flask-sqlalchemy~=3.1.1",
    "gunicorn==21.2.0",
    "h11==0.14.0",
    "httpcore==0.17.3",
    "httpx==0.24.1",
    "idna==2.10",
    "importlib-metadata==6.8.0",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "joblib==1.3.2",
    "langcodes==3.3.0",
    "markupsafe==2.1.3",
    "marshmallow~=3.22.0",
    "murmurhash==1.0.9",
    "packaging==23.1",
    "pandas~=2.2.3",
    "pathy==0.10.2",
    "pluggy==1.5.0",
    "pre-commit~=4.0.1",
    "preshed==3.0.8",
    "psycopg[binary,pool]~=3.2",
    "py==1.11.0",
    "pycparser==2.21",
    "pydantic==2.10.2",
    "pydantic-core==2.27.1",
    "pygithub~=2.4.0",
    "pyjwt~=2.9.0",
    "pytest==8.3.3",
    "pytest-mock~=3.12.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3",
    "realtime==1.0.0",
    "regex==2023.8.8",
    "requests==2.31.0",
    "rfc3986==1.5.0",
    "six==1.16.0",
    "smart-open==6.4.0",
    "sniffio==1.3.0",
    "srsly==2.4.7",
    "storage3==0.5.4",
    "strenum==0.4.15",
    "toml==0.10.2",
    "typer==0.9.0",
    "typing-extensions==4.12.2",
    "urllib3==1.26.18",
    "wasabi==1.1.2",
    "websockets==10.4",
    "werkzeug==3.0.1",
    "zipp==3.16.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "black>=25.1.0",
    "deepdiff>=8.5.0",
    "docker>=7.1.0",
    "pytest==8.3.3",
    "pytest-cov>=6.1.1",
    "ruff>=0.12.0",
]

[tool.ruff.lint]

[tool.basedpyright]
ignore = [
    "tests",
    "tests_comprehensive",
    "start_mirrored_local_app.py",
    "relation_access_permissions",
    "alembic",
]
reportMissingTypeArgument = false
reportUnsafeMultipleInheritance = false
reportMissingSuperCall = false
reportUndefinedVariable = false